# CPS-Course-Projects

./: README.md
CA1 - Access Control Management Over IOT/Proteus/: Embedded RFID Scanner.pdsprj.SARA.sarae.workspace
CA1 - Access Control Management Over IOT/Proteus/Project Backups/: Embedded RFID Scanner [20240420, 16-47-23].pdsprj
CA1-Access-Control-Management-Over-IOT/: ANSWERS.md  README.md
CA1-Access-Control-Management-Over-IOT/Client/: CMakeLists.txt  cpsapplication.cpp  cpsapplication.h  cpsbutton.cpp  cpsbutton.h  cpshistorywindow.cpp  cpshistorywindow.h  cpsmainwindow.cpp  cpsmainwindow.h  cpstextfield.cpp  cpswindowsapitools.h  main.cpp
CA1-Access-Control-Management-Over-IOT/Client/assets/: icon.rc
CA1-Access-Control-Management-Over-IOT/Client/users/: cpsrfiduser.cpp  cpsrfiduser.h  cpsuser.cpp  cpsuser.h
CA1-Access-Control-Management-Over-IOT/Client/websocket/: cpswebsocketclient.cpp  cpswebsocketclient.h  cpswebsocketrequest.cpp  cpswebsocketrequest.h  cpswebsocketresponse.cpp  cpswebsocketresponse.h
CA1-Access-Control-Management-Over-IOT/Client/widgets/: cpsbutton.cpp  cpsbutton.h  cpslabel.cpp  cpslabel.h  cpstextfield.h
CA1-Access-Control-Management-Over-IOT/Client/windows/: cpshistorywindow.cpp  cpsmainwindow.cpp  cpsmainwindow.h
CA1-Access-Control-Management-Over-IOT/Embedded/embedded-rfid-scanner/: embedded-rfid-scanner.ino
CA1-Access-Control-Management-Over-IOT/Embedded/ethernet-handler/: ethernet-handler.ino
CA1-Access-Control-Management-Over-IOT/Proteus/: Embedded RFID Scanner.pdsprj  Embedded RFID Scanner.pdsprj.SARA.sarae.workspace
CA1-Access-Control-Management-Over-IOT/Proteus/Project Backups/: Embedded RFID Scanner [20240420, 16-55-16].pdsprj  Embedded RFID Scanner [20240420, 18-29-22].pdsprj  Embedded RFID Scanner [20240420, 19-48-54].pdsprj  Embedded RFID Scanner [20240420, 20-48-30].pdsprj  Embedded RFID Scanner [Autosaved].pdsprj
CA1-Access-Control-Management-Over-IOT/Server/: CMakeLists.txt  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h  main.cpp  monitoringsystemauthenticationitem.cpp  monitoringsystemauthenticationitem.h  monitoringsystemauthenticator.cpp  monitoringsystemauthenticator.h  monitoringsystemhistory.cpp  monitoringsystemhistory.h  monitoringsystemuser.cpp  monitoringsystemuser.h  rfidauthenticationhistory.cpp  rfidauthenticationhistory.h  rfidauthenticationitem.cpp  rfidauthenticationitem.h  rfidauthenticator.cpp  rfidauthenticator.h  utils.cpp  utils.h  websocketrequest.cpp  websocketrequest.h  websocketresponse.cpp  websocketresponse.h  websocketserver.cpp  websocketserver.h
CA1-Access-Control-Management-Over-IOT/Server/data/: monitoring_system_history.json  monitoring_system_users.json  rfid_tags.json
CA2-Motion-Based-Authentication/: README.md
CA2-Motion-Based-Authentication/Motion-Based-Authenticator/: CMakeLists.txt  Main.qml  Notification.qml  PatternPage.qml  SensorValues.qml  SensorsPage.qml  acceleration.h  accelerometerhandler.cpp  accelerometerhandler.h  angle.h  authenticator.cpp  authenticator.h  backend.cpp  backend.h  direction.h  gyroscopehandler.cpp  gyroscopehandler.h  kalmanfilter.cpp  kalmanfilter.h  main.cpp  motion-based-authenticator.qmlproject  motion-based-authenticator.qmlproject.qtds  movement.cpp  movement.h  movementpattern.cpp  movementpattern.h  patternrecognizer.cpp  patternrecognizer.h  patternrecorder.cpp  patternrecorder.h  rotation.h
CA2-Motion-Based-Authentication/assets/: .$failure.drawio.bkp  .$pattern.drawio.bkp  .$successful.drawio.bkp  failure.drawio  pattern.drawio  successful.drawio
